FE: Small Fresh fix for extra paddings

--- a/src/assets/less/components/cards.less
+++ b/src/assets/less/components/cards.less
@@ -99,6 +99,12 @@
     background: @nailBg;
     margin-bottom: 10px;
 
+  /* Rectangle 2: */
+  background: #FFFFFF;
+  box-shadow: 0px 8px 12px 0px #EBEEF3;
+  border-radius: 4px;
+
+
     .panel-heading {
         .cardPaddings();
         background-color: initial;
@@ -148,6 +154,9 @@
     }
 
     .panel-footer {
+      background: @nailBg;
+      font-size: @nailFooterTextSize;
+      color: @nailHeaderColor;
 
         a {
             margin: 0 1.4em;
